# rs-read-trimesh

./: CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
scripts/: generate_diverse_field_types.py
src/: lib.rs
tests/: tests.rs
tests/sample_files/: collada.dae  doubles_ints.ply  doubles_shorts.ply  floats_ints.ply  floats_shorts.ply  robot.dae  stl.stl
