[package]
name = "rs-read-trimesh"
version = "0.1.7"
authors = ["Bourumir Wyngs"]
description = "A reader for loading 3D meshes from PLY, STL, DAE (Collada) and OBJ into Parry Trimesh."
homepage = "https://github.com/bourumir-wyngs/rs-read-trimesh"
repository = "https://github.com/bourumir-wyngs/rs-read-trimesh.git"
license = "MIT"
readme = "README.md"
keywords = ["trimesh", "PLY", "STL", "OBJ", "DAE"]
categories = ["filesystem", "parser-implementations"]
edition = "2024"

[dependencies]
ply-rs-bw = "2.0.2"
stl_io = "0.8"
tobj = "4.0"
dae-parser = "0.11.0"

parry17 = { package = "parry3d", version = "0.17", optional = true }
parry18 = { package = "parry3d", version = "0.18", optional = true }

[features]
use-parry-17 = ["parry17"]
use-parry-18 = ["parry18"]
default = ["parry17"]

# cargo test --features use-parry-18 --no-default-features
