[package]
name = "rs-read-trimesh"
version = "2.0.4"
authors = ["Bourumir Wyngs"]
description = "A reader for loading 3D meshes from PLY, STL, DAE (Collada) and OBJ into Parry Trimesh."
homepage = "https://github.com/bourumir-wyngs/rs-read-trimesh"
repository = "https://github.com/bourumir-wyngs/rs-read-trimesh.git"
license = "MIT"
readme = "README.md"
keywords = ["trimesh", "PLY", "STL", "OBJ", "DAE"]
categories = ["filesystem", "parser-implementations"]
edition = "2024"

[dependencies]
ply-rs-bw = "2.0.2"
stl_io = "0.8"
tobj = "4.0"
dae-parser = "0.11.0"

parry13 = { package = "parry3d", version = ">=0.9, <0.14", optional = true }
parry17 = { package = "parry3d", version = ">=0.14, <0.18", optional = true }
parry_19 = { package = "parry3d", version = ">=0.18, <=0.23", optional = true }


[features]
use-parry-9_13 = ["parry13"]
use-parry-14_17 = ["parry17"]
use-parry-18_19 = ["parry_19"]
default = ["parry_19"]

# cargo test --features use-parry-18_19 --no-default-features
